# selfclaw

./: CLAUDE.md  Cargo.toml  README.ko.md  README.md  selfclaw.toml
.github/workflows/: ci.yml  release.yml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: lib.rs  loop_runner.rs  prompt.rs  purpose.rs  state.rs
crates/comms/: Cargo.toml
crates/comms/src/: channel.rs  cli.rs  discord.rs  gateway.rs  lib.rs  message.rs  queue.rs  slack.rs  telegram.rs  webchat.rs  ws.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: episodic.rs  index.rs  lib.rs  purpose.rs  store.rs
crates/selfclaw/: Cargo.toml
crates/selfclaw/src/: home.rs  main.rs
crates/selfclaw/src/commands/: chat.rs  daemon.rs  doctor.rs  init.rs  memory.rs  mod.rs  onboard.rs  providers.rs  run.rs  status.rs
crates/selfclaw/tests/: integration.rs
crates/skills/: Cargo.toml
crates/skills/src/: lib.rs  loader.rs  registry.rs  skill.rs  watcher.rs
crates/tools/: Cargo.toml
crates/tools/src/: file.rs  lib.rs  llm.rs  registry.rs  scheduler.rs  shell.rs
docs/: USAGE_GUIDE.ko.md  USAGE_GUIDE.md
memory/episodic/: milestones.md
memory/identity/: purpose_journal.md  self_model.md  values.md
memory/meta/: memory_index.md  reflection_prompts.md
memory/operational/: failures.md  improvements.md  todo.md
memory/relational/: interaction_patterns.md
packaging/debian/: control  postinst
packaging/homebrew/: selfclaw.rb
packaging/rpm/: selfclaw.spec
scripts/: install.sh
skills/: sample_skill.md
web-ui/: package-lock.json  package.json
web-ui/src/app/: layout.tsx  page.tsx
web-ui/src/components/: ChatPanel.tsx  MemoryViewer.tsx  PurposeTracker.tsx  StatusPanel.tsx
web-ui/src/hooks/: useWebSocket.ts
web-ui/src/lib/: types.ts
web-ui/src/stores/: agentStore.ts
