[workspace]
members = [
    "crates/agent-core",
    "crates/memory",
    "crates/tools",
    "crates/skills",
    "crates/comms",
    "crates/config",
    "crates/selfclaw",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pulldown-cmark = "0.12"
notify = "7"
anyhow = "1"
thiserror = "2"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
dirs = "6"
dialoguer = "0.11"
