[package]
name = "selfclaw-comms"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
selfclaw-config = { path = "../config" }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tempfile = "3"
