[package]
name = "selfclaw"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "selfclaw"
path = "src/main.rs"

[dependencies]
selfclaw-agent-core = { path = "../agent-core" }
selfclaw-memory = { path = "../memory" }
selfclaw-tools = { path = "../tools" }
selfclaw-skills = { path = "../skills" }
selfclaw-comms = { path = "../comms" }
selfclaw-config = { path = "../config" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
